--- a/modelling/main_bi_xgboost_basic.Rmd
+++ b/modelling/main_bi_xgboost_basic.Rmd
@@ -13,62 +13,58 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 #setwd("C:/Users/npoh/Documents/Git/projects/bi/modelling")
-#setwd("F:/Norman/BI_IPF2017/modelling")
+setwd("F:/Norman/BI_IPF2017/modelling")
 library(palab)
 library(palabmod)
 library(ggplot2)
 library(tidyverse)
 library(stringr)
 library(lubridate)
-library(mlr)
 
 ```
 
 
 ## List files -- on local git
 ```{r}
-run_on_server <- TRUE
+data_dir = "../data/features/"
+files <- list.files(data_dir)
+files
+```
 
-if (run_on_server) {
-  data_dir = ""
-  files <- c(
+## List files -- on server
+```{r}
+data_dir = ""
+files <- c(
   "F:/Hui/Project_2016/BI_IPF_2016/04_Summary/004_data/all_features_neg.csv", 
   "F:/Hui/Project_2016/BI_IPF_2016/04_Summary/004_data/all_features_pos.csv")
-} else {
-  data_dir = "../data/features/"
-  files <- list.files(data_dir)
-  files
-}
+
 ```
 
 ## Rectify the variable configuration file
 We need to process the file bi_features_var_config.csv because it does not provide the correct variable type so we programatically correct for the output in the following ways:
 
 ```{r}
+config <- read_csv("bi_features_var_config.csv")
 
-if (run_on_server) {
-  config <- read_csv("bi_features_var_config.csv")
-} else {
-  
-  # 1. Add key -- otherwise the file won't load
-  config$Type[ str_detect(config$Column, "^patient_id$") ] = "key"
-  
-  # We shall not carry out step 2 below because xgboost can only take numerical data !!!
-  # 2. Change the flag to categorical 
-  # matching <- str_detect(config$Column,"_FLAG$")
-  # config$Type[matching]="categorical"
-  # 
-  # matching <- str_detect(config$Column,"_BEFORE$")
-  # config$Type[matching]="categorical"
-  # 
-  # matching <- str_detect(config$Column,"_AFTER$")
-  # config$Type[matching]="categorical"
-  # 
-  # matching <- str_detect(config$Column,"^label$")
-  # config$Type[matching]="categorical"
-  # 
-  write_csv(config,"bi_features_var_config.csv")
-}
+# 1. Add key -- otherwise the file won't load
+config$Type[ str_detect(config$Column, "^patient_id$") ] = "key"
+
+# We shall not carry out step 2 below because xgboost can only take numerical data !!!
+# 2. Change the flag to categorical 
+# matching <- str_detect(config$Column,"_FLAG$")
+# config$Type[matching]="categorical"
+# 
+# matching <- str_detect(config$Column,"_BEFORE$")
+# config$Type[matching]="categorical"
+# 
+# matching <- str_detect(config$Column,"_AFTER$")
+# config$Type[matching]="categorical"
+# 
+# matching <- str_detect(config$Column,"^label$")
+# config$Type[matching]="categorical"
+# 
+write_csv(config,"bi_features_var_config.csv")
+
 ```
 
 ## Generating a variable configuration file for the samples
@@ -146,12 +142,12 @@ setdiff(names(bi_neg$data), names(bi$data))
 ## Combine them
 
 ```{r}
-# colnames(bi$data)
-# new_predictor_list$Variable_name
+colnames(bi$data)
+new_predictor_list$Variable_name
 ```
 
 
-## Row-binding
+## Combine them
 ```{r}
 dat <-rbind(bi$data, bi_neg$data)
 ```
@@ -160,6 +156,7 @@ dat <-rbind(bi$data, bi_neg$data)
 ## List variables that should not have been included
 ```{r}
 config$Column[is_included == FALSE]
+
 ```
 
 ## Analyse variables that should not have been included before deleting them -- I want to know why these variables are not good
@@ -230,106 +227,56 @@ res <- resample(learner = lrn_xgb, task = dataset, resampling = rdesc)
 # make pr curve:
 pr_curve <- perf_binned_perf_curve(pred = res$pred)
 ```
-
-
-
-
-## OK, we know that xgboost is running correctly. Now, we can run a full-fledged version
-
-## Start with repeatability in mind
-```{r results = "hide"}
-random_seed <- 123
-set.seed(random_seed, "L'Ecuyer")
-
-recall_thrs <- 10
-random_search_iter <- 50L
-
-output_folder = "xgboost"
-utils_create_output_folder(output_folder)
-```
-
-##  Setup modelling
-
+##
 ```{r}
-target_vector <- dat2$label
-  
-# Define weights as the inverse class frequency
-target_vector = getTaskTargets(dataset)
-target_tab = as.numeric(table(target_vector))
-iw = 1/target_tab[target_vector]
+pr <- perf_binned_perf_curve(res$pred, x_metric="rec", y_metric="prec",
+                             bin_num=20, agg_func = mean)
+readr::write_csv(pr$curve, "binned_pr.csv")
 
-# Define XGboost learner
-lrn <- makeLearner("classif.xgboost", predict.type="prob")
+# ------------------------------------------------------------------------------
+# Plot any performance metric for each model as a function of threshold
+# ------------------------------------------------------------------------------
 
-lrn$par.vals = list(
-  nrounds = 100,
-  verbose = F,
-  objective = "binary:logistic"
-  # to restrict memory and  cpu usage set nthreads = 2
-  # for multiclass use objective = "multi:softmax"
-)
+# Define performance metrics we want to plot, ppv=precision, tpr=recall
+perf_to_plot <- list(fpr, tpr, ppv)
 
-# Wrap our learner so it will randomly downsample the majority class
-lrn <- makeUndersampleWrapper(lrn)
+# Generate the data for the plots, do aggregate=T if you want the mean
+thr_perf <- generateThreshVsPerfData(res$pred, perf_to_plot, aggregate=F)
+plotThreshVsPerf(thr_perf)
 
-# Define hyper parameters, read this https://goo.gl/CMQxha and XGBoost's docs
-ps = makeParamSet(
-  makeNumericParam("eta", lower=0.01, upper=0.3),
-  makeIntegerParam("max_depth", lower=2, upper=6),
-  makeIntegerParam("min_child_weight", lower=1, upper=5),
-  makeNumericParam("colsample_bytree", lower=.5, upper=1),
-  makeNumericParam("subsample", lower=.5, upper=1),
-  makeNumericParam("usw.rate", lower=.5, upper=1)
-)
+# Get models from outer folds
+outer_models <- results_models(res)
 
-# Define random search
-ctrl <- makeTuneControlRandom(maxit=random_search_iter, tune.threshold=F)
-
-# Define performane metrics - use at least 2, otherwise get_results won't work
-pr10 <- perf_make_pr_measure(recall_thrs, "pr10")
-m2 <- auc
-m3 <- setAggregation(pr10, test.sd)
-m4 <- setAggregation(auc, test.sd)
-# It's always the first in the list that's used to rank hyperparams in tuning
-m_all <- list(pr10, m2, m3, m4)
-
-# Define outer and inner resampling strategies
-outer <- makeResampleDesc("CV", iters=3, stratify=T, predict = "both")
-inner <- makeResampleDesc("CV", iters=3, stratify=T)
-
-matching <- TRUE
-if (matching){
-  outer$stratify <- FALSE
-  inner$stratify <- FALSE
-}
-
-# Define wrapped learner: this is mlR's way of doing nested CV on a learner
-lrn_wrap <- makeTuneWrapper(lrn, resampling=inner, par.set=ps, control=ctrl,
-                            show.info=F, measures=m_all)
-```
-
-##  Training model with nested CV and save results
-
-```{r}
-parallelStartSocket(detectCores(), level="mlr.tuneParams")
-res <- resample(lrn_wrap, dataset, resampling=outer, models=T, weights=iw,
-                extract=getTuneResult, show.info=F, measures=m_all)
-parallelStop()
-readr::write_rds(res, file.path(output_folder, "all_results.rds"))
 
 ```
+
 
 
 ## Train the xgboost -- can take a while
 
 ```{r}
 # train model
-xgb_model <- train(learner = lrn_xgb,
-                   task = dataset)
+xgb_model <- train(learner = lrn_xgb, task = dataset)
 
 # make predictions
 pred <- predict(object = xgb_model, newdata = cars_num)
 
 pred$threshold
+
+
+```
+
+## dd
+
+```{r}
+
+extra <- list("Matching"=as.character(matching),
+              "NumSamples"=dataset$task.desc$size,
+              "NumFeatures"=sum(dataset$task.desc$n.feat),
+              "ElapsedTime(secs)"=res$runtime,
+              "RandomSeed"=random_seed,
+              "Recall"=recall_thrs,
+              "IterationsPerFold"=random_search_iter)
+
 
 ```
