--- a/modelling/main_installation_palab_n_palabmod.Rmd
+++ b/modelling/main_installation_palab_n_palabmod.Rmd
@@ -27,4 +27,5 @@ install.packages("F:/Norman/Git/palabmod/builds/palabmod_1.0.2.tar.gz", repos = 
 ## Install additional libraries
 ```{r}
 install.packages("xgboost")
+install.packages("parallelMap")
 ```
