--- a/modelling/main_installation_palab_n_palabmod.Rmd
+++ b/modelling/main_installation_palab_n_palabmod.Rmd
@@ -33,5 +33,6 @@ install.packages("knitr")
 install.packages("xgboost")
 install.packages("parallelMap")
 install.packages('PRROC')
+install.packages('tictoc')
 
 ```
